animecornerstore.com (archived on 2017-06-06)
{
  "alexa_rank": 634044,
  "analysis_subcorpus": true,
  "categories": "entertainment;shopping",
  "char_count": 4016,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.01,
  "homepage_snapshot_redirected_domain": "animecornerstore.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170324021644id_/http://animecornerstore.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170324021644id_/http%3A//animecornerstore.com",
  "interval": "2017_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "animecornerstore.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606021232id_/http%3A//www.animecornerstore.com/privsecsat.html",
  "policy_title": "Privacy / Security Statement",
  "policy_url": "animecornerstore.com/privsecsat.html",
  "sha1": "f6e640f7b579ffe3c321d23410b7dcaec1ea51a8",
  "simhash": 5040324757604347054,
  "simhash_updated": false,
  "site_hostname": "animecornerstore.com",
  "site_url": "http://animecornerstore.com",
  "smog": 11.28,
  "strict_updated": false,
  "timestamp": "20170606021232",
  "word_count": 668,
  "year": 2017
}

--- a/a/an/ani/animecornerstore.com.html
+++ b/a/an/ani/animecornerstore.com.html
@@ -1,22 +1,22 @@
-<!--The following is the downloaded HTML source of the animecornerstore.com privacy policy that was archived on 2016-11-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161122200806id_/http%3A//www.animecornerstore.com/privsecsat.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the animecornerstore.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606021232id_/http%3A//www.animecornerstore.com/privsecsat.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><script type="text/javascript" async="" src="//np.lexity.com/embed/YA/e9993d48f675764ee1fae975a7f03fb9?id=6915461ba1d6"></script><script async="" src="//connect.facebook.net/en_US/fbds.js"></script><script type="text/javascript"> 
  <!-- 
- (new Image).src="http://store.yahoo.net/cgi-bin/refsd?e=http://www.animecornerstore.com/privsecsat.html&h=www.animecornerstore.com&v=1.0&dr=" + escape(document.referrer); 
+ (new Image).src="https://store.yahoo.net/cgi-bin/refsd?e=http://www.animecornerstore.com/privsecsat.html&h=www.animecornerstore.com&v=1.0&dr=" + escape(document.referrer); 
  --> 
  </script>
 <title>Privacy / Security Statement</title><meta name="description" content="Your Anime Super Store! - 1000's of items, great prices, fast delivery!">
 <meta name="verify-v1" content="9BgfaQetbkIYORTeGEuIZ7zLuPP6p+z53yk93LacC/U="> 
-<link rel="stylesheet" type="text/css" href="http://lib.store.yahoo.net/lib/animecorner/lightbox.css">
+<link rel="stylesheet" type="text/css" href="https://lib.store.yahoo.net/lib/animecorner/lightbox.css">
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/prototype/1.7.1.0/prototype.js"></script>
-<script type="text/javascript" src="http://lib.store.yahoo.net/lib/animecorner/scriptaculous.js?load=effects"></script>
-<script type="text/javascript" src="http://lib.store.yahoo.net/lib/animecorner/lightbox.js"></script>
-<link rel="shortcut icon" href="http://lib.store.yahoo.net/lib/animecorner/favicon.ico" type="image/x-icon"><style type="text/css">
+<script type="text/javascript" src="https://lib.store.yahoo.net/lib/animecorner/scriptaculous.js?load=effects"></script>
+<script type="text/javascript" src="https://lib.store.yahoo.net/lib/animecorner/lightbox.js"></script>
+<link rel="shortcut icon" href="https://lib.store.yahoo.net/lib/animecorner/favicon.ico" type="image/x-icon"><style type="text/css">
 h1 { font-family: dom bold, Arial-bold, Helvetica, sans-serif; font-size: 16px; font-weight: bold; color: #ffffff; margin:1px; line-height: 16px}
 </style>
-</head><body bgcolor="000000" text="ff9900" link="ffff66" vlink="ffff66"><center><map name="7fbf5833ee9b1261"><area shape="rect" coords="0,0,367,35" href="index.html"><area shape="rect" coords="367,0,431,35" href="index.html"><area shape="rect" coords="431,0,558,35" href="http://order.store.yahoo.net/animecorner/cgi-bin/wg-order?animecorner"><area shape="rect" coords="558,0,639,35" href="info.html"><area shape="rect" coords="639,0,739,35" href="nsearch.html"><area shape="rect" coords="739,0,844,35" href="mailto:customercare@animecorner.com"></map><img src="http://ep.yimg.com/ay/animecorner/anime-dvd-bd-13.gif" width="844" height="35" usemap="#7fbf5833ee9b1261" border="0" hspace="0" vspace="0" ismap=""><br><img src="http://ep.yimg.com/ca/Img/trans_1x1.gif" height="20" width="1" border="0"><br><table border="0" cellspacing="0" cellpadding="0" width="844"><tbody><tr valign="top"><td width="844"><img src="http://ep.yimg.com/ca/I/animecorner_2273_390408639" width="172" height="194" align="left" border="0" hspace="0" vspace="0"><img src="http://ep.yimg.com/ca/Img/trans_1x1.gif" height="202" width="10" align="left" border="0"><h1>Security and Privacy</h1><br><font size="2" face="dom bold, arial, helvetica"><div align="center">
+</head><body bgcolor="000000" text="ff9900" link="ffff66" vlink="ffff66"><center><map name="10757593598dc2baa"><area shape="rect" coords="0,0,367,35" href="index.html"><area shape="rect" coords="367,0,458,35" href="index.html"><area shape="rect" coords="458,0,585,35" href="http://order.store.yahoo.net/animecorner/cgi-bin/wg-order?animecorner"><area shape="rect" coords="585,0,666,35" href="info.html"><area shape="rect" coords="666,0,766,35" href="nsearch.html"><area shape="rect" coords="766,0,871,35" href="mailto:customercare@animecorner.com"></map><img src="https://sep.yimg.com/ay/animecorner/anime-dvd-bd-16.gif" width="871" height="35" usemap="#10757593598dc2baa" border="0" hspace="0" vspace="0" ismap=""><br><img src="https://sep.yimg.com/ca/Img/trans_1x1.gif" height="20" width="1" border="0"><br><table border="0" cellspacing="0" cellpadding="0" width="871"><tbody><tr valign="top"><td width="871"><img src="https://sep.yimg.com/ca/I/animecorner_2273_390408639" width="172" height="194" align="left" border="0" hspace="0" vspace="0"><img src="https://sep.yimg.com/ca/Img/trans_1x1.gif" height="202" width="10" align="left" border="0"><h1>Security and Privacy</h1><br><font size="2" face="dom bold, arial, helvetica"><div align="center">
    <center>
    <table border="0" width="70%" bgcolor="#333333">
    <tbody><tr>
@@ -142,8 +142,8 @@ us.
 </p><p align="center"><i><b><font color="#FF9900" face="arial, helvetica" size="3">Thank you for Choosing the Anime Corner Store!</font></b>
 </i>
 </p></font><p align="center"><font size="2" face="dom bold, arial, helvetica"><i><b><font color="#FF9900" face="arial, helvetica" size="3">Enjoy your anime!</font></b>
-</i><br><br><br clear="all"></font></p></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="0" width="844"><tbody><tr><td><font size="2" face="dom bold, arial, helvetica"><script language="JavaScript">
-var how_many_ads = 4;
+</i><br><br><br clear="all"></font></p></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="0" width="871"><tbody><tr><td><font size="2" face="dom bold, arial, helvetica"><script language="JavaScript">
+var how_many_ads = 2;
 var now = new Date()
 var sec = now.getSeconds()
 var ad = sec % how_many_ads;
@@ -151,22 +151,12 @@ ad +=1;
 if (ad==1) {
 url="http://www.animecornerstore.com/index.html";
 alt="animecornerstore.com";
-banner="http://lib.store.yahoo.net/lib/animecorner/2013-Banner-RACS1";
+banner="https://lib.store.yahoo.net/lib/animecorner/2013-Banner-RACS1";
 }
 if (ad==2) {
 url="http://www.animecornerstore.com/index.html";
 alt="animecornerstore.com";
-banner="http://lib.store.yahoo.net/lib/animecorner/2013-Banner-RACS2";
-}
-if (ad==3) {
-url="http://www.animecornerstore.com/index.html";
-alt="animecornerstore.com";
-banner="http://lib.store.yahoo.net/lib/animecorner/SHOPEARLY16-BANNER.jpg";
-}
-if (ad==4) {
-url="http://www.animecornerstore.com/index.html";
-alt="animecornerstore.com";
-banner="http://lib.store.yahoo.net/lib/animecorner/SHOPEARLY16-BANNER.jpg";
+banner="https://lib.store.yahoo.net/lib/animecorner/2013-Banner-RACS2";
 }
 document.write('<center>');
 document.write('<a href=\"' + url + '\" target=\"_top\">');
@@ -175,7 +165,7 @@ document.write('alt=\"' + alt + '\" border=0><br>');
 document.write('</center>');
 document.write('</a>');
 // End -->
-</script><center><a href="http://www.animecornerstore.com/index.html" target="_top"><img src="http://lib.store.yahoo.net/lib/animecorner/SHOPEARLY16-BANNER.jpg" alt="animecornerstore.com" border="0"><br></a></center>
+</script><center><a href="http://www.animecornerstore.com/index.html" target="_top"><img src="https://lib.store.yahoo.net/lib/animecorner/2013-Banner-RACS2" alt="animecornerstore.com" border="0"><br></a></center>
 <br><center>
 <a href="http://www.animecornerstore.com/shipping.html#FreeShipping"><img border="0" src="https://lib.store.yahoo.net/lib/animecorner/FP-FreeShipCODE.png" alt="Use Code FREESHIP to Get Free Super Saver Shipping On Orders Over $50!" align="center" width="649" height="27"><br>
 <br>
@@ -244,7 +234,7 @@ csell_env = 'bf1';
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
- </script> <script type="text/javascript" src="http://l.yimg.com/a/ult/ylc_1.9.js"></script> <script type="text/javascript" src="http://l.yimg.com/a/lib/smbiz/store/csell/js/beacon-1.3.6.4.js">
+ </script> <script type="text/javascript" src="https://s.yimg.com/lq/ult/ylc_1.9.js"></script> <script type="text/javascript" src="https://s.yimg.com/lq/lib/smbiz/store/csell/js/beacon-1.3.6.4.js">
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
@@ -252,7 +242,7 @@ csell_env = 'bf1';
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
-function csell_GLOBAL_INIT_TAG() { var csell_token_map = {}; csell_token_map['TOK_ITEM_ID_LIST'] = 'privsecsat'; csell_token_map['TOK_BEACON_TYPE'] = 'prod'; csell_token_map['TOK_RAND_KEY'] = 't'; csell_token_map['TOK_SPACEID'] = '2022276099'; csell_token_map['TOK_IS_ORDERABLE'] = '2'; csell_token_map['TOK_STORE_ID'] = 'animecorner'; csell_token_map['TOK_URL'] = 'http://geo.yahoo.com'; csell_token_map['TOK_ORDER_HOST'] = 'order.store.yahoo.net';  c = csell_page_data; var x = (typeof storeCheckoutDomain == 'string')?storeCheckoutDomain:'order.store.yahoo.net'; var t = csell_token_map; c['s'] = t['TOK_SPACEID']; c['url'] = t['TOK_URL']; c['si'] = t[ts]; c['ii'] = t['TOK_ITEM_ID_LIST']; c['bt'] = t['TOK_BEACON_TYPE']; c['rnd'] = t['TOK_RAND_KEY']; c['io'] = t['TOK_IS_ORDERABLE']; YStore.addItemUrl = 'http%s://'+x+'/'+t[ts]+'/ymix/MetaController.html?eventName.addEvent&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_itemId=%s&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_quantity=1&ysco_key_cs_item=1&sectionId=ysco.cart&ysco_key_store_id='+t[ts]; } 
+function csell_GLOBAL_INIT_TAG() { var csell_token_map = {}; csell_token_map['TOK_ITEM_ID_LIST'] = 'privsecsat'; csell_token_map['TOK_BEACON_TYPE'] = 'prod'; csell_token_map['TOK_RAND_KEY'] = 't'; csell_token_map['TOK_SPACEID'] = '2022276099'; csell_token_map['TOK_IS_ORDERABLE'] = '2'; csell_token_map['TOK_STORE_ID'] = 'animecorner'; csell_token_map['TOK_URL'] = 'https://geo.yahoo.com'; csell_token_map['TOK_ORDER_HOST'] = 'order.store.yahoo.net';  c = csell_page_data; var x = (typeof storeCheckoutDomain == 'string')?storeCheckoutDomain:'order.store.yahoo.net'; var t = csell_token_map; c['s'] = t['TOK_SPACEID']; c['url'] = t['TOK_URL']; c['si'] = t[ts]; c['ii'] = t['TOK_ITEM_ID_LIST']; c['bt'] = t['TOK_BEACON_TYPE']; c['rnd'] = t['TOK_RAND_KEY']; c['io'] = t['TOK_IS_ORDERABLE']; YStore.addItemUrl = 'http%s://'+x+'/'+t[ts]+'/ymix/MetaController.html?eventName.addEvent&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_itemId=%s&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_quantity=1&ysco_key_cs_item=1&sectionId=ysco.cart&ysco_key_store_id='+t[ts]; } 
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
@@ -260,18 +250,6 @@ function csell_REC_VIEW_TAG() {  var env = (typeof csell_env == 'string')?csell_
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
-var csell_token_map = {}; csell_token_map['TOK_PAGE'] = 'p'; csell_token_map['TOK_WS_URL'] = 'http://animecorner.csell.store.yahoo.net/cs/recommend?itemids=privsecsat&location=p'; csell_token_map['TOK_SHOW_CS_RECS'] = 'true'; csell_token_map['TOK_CURR_SYM'] = '$';  var t = csell_token_map; csell_GLOBAL_INIT_TAG(); YStore.page = t['TOK_PAGE']; YStore.currencySymbol = t['TOK_CURR_SYM']; YStore.crossSellUrl = t['TOK_WS_URL']; YStore.showCSRecs = t['TOK_SHOW_CS_RECS']; </script> <script type="text/javascript" src="http://l.yimg.com/a/lib/smbiz/store/csell/js/recs-1.3.2.2.js"></script> <script type="text/javascript">
+var csell_token_map = {}; csell_token_map['TOK_PAGE'] = 'p'; csell_token_map['TOK_WS_URL'] = 'https://animecorner.csell.store.yahoo.net/cs/recommend?itemids=privsecsat&location=p'; csell_token_map['TOK_SHOW_CS_RECS'] = 'true'; csell_token_map['TOK_CURR_SYM'] = '$';  var t = csell_token_map; csell_GLOBAL_INIT_TAG(); YStore.page = t['TOK_PAGE']; YStore.currencySymbol = t['TOK_CURR_SYM']; YStore.crossSellUrl = t['TOK_WS_URL']; YStore.showCSRecs = t['TOK_SHOW_CS_RECS']; </script> <script type="text/javascript" src="https://s.yimg.com/ae/store/secure/recs-1.3.2.2.js"></script> <script type="text/javascript">
 </script>
-<script type="text/javascript"> 
- <!-- 
- if (document.referrer && (document.referrer!='') && window.Image) 
- { 
- (new Image).src="http://redirect1.vip.store.yahoo.com/cgi-bin/referadd?spcl=1&et=5834a6d2&catalog=animecorner&r=" + escape(document.referrer) + "&v=1"; }
- // --> 
- </script><script type="text/javascript"> 
- <!-- 
- if (document.referrer && (document.referrer!='') && window.Image) 
- { 
- (new Image).src="http://redirect1.vip.store.yahoo.net/cgi-bin/referadd?spcl=1&et=5834a6d2&catalog=animecorner&r=" + escape(document.referrer) + "&v=3"; }
- // --> 
- </script><script type="text/javascript">(function (d, w) { var f = function () { var x = d.getElementsByTagName('SCRIPT')[0]; var s = d.createElement('SCRIPT'); s.type = 'text/javascript'; s.async = true; s.src = '//np.lexity.com/embed/YA/e9993d48f675764ee1fae975a7f03fb9?id=6915461ba1d6'; x.parentNode.insertBefore(s, x); }; w.attachEvent ? w.attachEvent('onload',f) : w.addEventListener('load',f,false); }(document, window)); </script></body></html>
+<script type="text/javascript">(function (d, w) { var f = function () { var x = d.getElementsByTagName('SCRIPT')[0]; var s = d.createElement('SCRIPT'); s.type = 'text/javascript'; s.async = true; s.src = '//np.lexity.com/embed/YA/e9993d48f675764ee1fae975a7f03fb9?id=6915461ba1d6'; x.parentNode.insertBefore(s, x); }; w.attachEvent ? w.attachEvent('onload',f) : w.addEventListener('load',f,false); }(document, window)); </script></body></html>
