--- a/f/fa/fam/familytreenow.com.html
+++ b/f/fa/fam/familytreenow.com.html
@@ -1,17 +1,13 @@
-<!--The following is the downloaded HTML source of the familytreenow.com privacy policy that was archived on 2015-09-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20150907090700id_/http%3A//www.familytreenow.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the familytreenow.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606021359id_/http%3A//www.familytreenow.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"><meta name="format-detection" content="telephone=no">
 <title>Privacy Policy - FamilyTreeNow.com</title>
-<link href="/Content/css?v=hlOCBHBBUKHFHYz5TEZxFSmFhW-KeXiIDCuSnhMv01A1" rel="stylesheet">
+<link href="/Content/css?v=vN23JwEbL8YhaLBX48KvwGxt1PLoXzwefBJvVv8Gnmo1" rel="stylesheet">
 </head>
-<body style=""><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">
-//<![CDATA[
-try{(function(a){var b="http://",c="www.familytreenow.com",d="/cdn-cgi/cl/",e="img.gif",f=new a;f.src=[b,c,d,e].join("")})(Image)}catch(e){}
-//]]>
-</script>
+<body>
 <div class="navbar navbar-large navbar-default navbar-fixed-top">
 <div class="container-fluid">
 <div class="navbar-header">
@@ -31,7 +27,7 @@ try{(function(a){var b="http://",c="www.familytreenow.com",d="/cdn-cgi/cl/",e="i
 </ul>
 <ul class="list-unstyled navbar-btn navbar-right" style="padding-right:15px;">
 <li>
-<a class="btn btn-success save-record-tree-input" rel="nofollow" href="/trees/person/input?familyTreeId=0"><i class=" fa fa-lg fa-user-plus"></i> &nbsp;<span class="hidden-sm">Start Family </span>Tree</a>
+<a class="btn btn-success" rel="nofollow" href="#" data-toggle="modal" data-target="#treeNewPersonModal2"><i class="fa fa-lg fa-user-plus"></i> &nbsp;<span class="hidden-sm">Start Family </span>Tree</a>
 </li>
 </ul>
 </div>
@@ -216,15 +212,12 @@ If for any reason you are concerned that the Personal Information you provided t
 <p>
 <b>Contacting Us.</b> If you have any questions about this Privacy Policy, or the practices of the FamilyTreeNow.com Applications and Community Services, please e-mail us by using our contact form located at <a href="/contact">http://www.familytreenow.com/contact</a> or write to us at:
 </p>
-<p>
-<img src="/images/FTN_Info.jpg">
-</p>
 </div>
 <hr>
 <div class="footer text-center">
 <p><a href="/">Home</a>&nbsp; - &nbsp;<a href="/trees">My Tree</a>&nbsp; - &nbsp;<a href="/about">About Us</a>&nbsp; - &nbsp;<a href="/terms">Terms</a><span class="hidden-xs">&nbsp; - &nbsp;</span><br class="visible-xs"><a href="/privacy">Privacy</a>&nbsp; - &nbsp;<a href="/contact">Contact Us</a> &nbsp; - &nbsp;
 <a href="https://www.familytreenow.com/myaccount/register">Join</a>&nbsp; - &nbsp;<a href="https://www.familytreenow.com/myaccount/login">Sign In</a>
-<br><br>© 2015 FamilyTreeNow.com<span class="hidden-xs hidden-sm"> 100% Free Genealogy</span></p>
+<br><br>© 2017 FamilyTreeNow.com<span class="hidden-xs hidden-sm"> 100% Free Genealogy</span></p>
 <p class="small text-center hidden-xs">
 Genealogy Directory:
 <a href="/records/genealogy/a">A</a> <a href="/records/genealogy/b">B</a> <a href="/records/genealogy/c">C</a>
@@ -250,9 +243,67 @@ Genealogy Directory:
 </div>
 </div>
 </div>
+ 
+<div class="modal" id="treeNewPersonModal2" tabindex="-1" role="dialog" aria-labelledby="treeNewPersonLabel2" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+<div class="modal-dialog modal-sm">
+<div class="modal-content">
+<div class="modal-header">
+<span class="modal-title">
+Start Your Family Tree
+</span>
+<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+</div>
+<div class="modal-body">
+<div class="row">
+<div class="col-xs-12 hidden alert alert-danger" id="errorMessage"></div>
+<div class="col-xs-12">
+<div id="divCreateAccountAndTree" class="panel panel-default col-xs-12" style="background-color:#e9f6fa;">
+<div class="panel-body">
+<div class="">
+<br>
+<div class="hidden alert alert-danger" id="errorMessage"></div>
+<div>
+<div class="row">
+<div class="form-group col-xs-12">
+<input class="form-control typeahead-firstname input-lg" data-val="true" data-val-maxlength="The field First Name must be a string or array type with a maximum length of '50'." data-val-maxlength-max="50" id="FirstName" maxlength="50" name="FirstName" placeholder="my first name" spellcheck="False" type="text" value="">
+</div>
+</div>
+<div class="row">
+<div class="form-group col-xs-12">
+<input class="form-control typeahead-lastname input-lg" data-val="true" data-val-maxlength="The field Last Name must be a string or array type with a maximum length of '50'." data-val-maxlength-max="50" id="LastName" maxlength="50" name="LastName" placeholder="my last name" spellcheck="False" type="text" value="">
+</div>
+</div>
+<div class="row">
+<div class="form-group col-xs-12">
+<select class="form-control input-lg" data-val="true" data-val-required="The Gender field is required." id="GenderTypeId" name="GenderTypeId"><option value="">gender</option>
+<option value="Male">Male</option>
+<option value="Female">Female</option>
+</select>
+</div>
+</div>
+<div class="row">
+<div class="form-group col-xs-12">
+<input class="form-control input-lg" id="Email" maxlength="50" name="Email" placeholder="email address" spellcheck="False" type="text" value="">
+</div>
+</div>
+<div class="row">
+<div class="form-group col-xs-12">
+<br>
+<button type="button" class="btn btn-success btn-lg center-block create-account-and-tree btn-block">Start My <span class="hidden-sm">Family</span> Tree</button>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>  
+</div>
+</div>
+</div>
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<script src="/bundles/jquery?v=FVs3ACwOLIVInrAl5sdzR2jrCDmVOWFbZMY6g6Q0ulE1"></script>
-<script src="/bundles/bootstrap?v=QCoTDHKdDuVKsayLlW_QJEBfvbc0risanrUQmUdTMdY1"></script>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/bundles/js?v=rfm2wv_XBxtBnr03wsvYa3z9mDv6_6qbYvNNPSd7zNA1"></script>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
