--- a/a/ai/aio/aiometa.com.html
+++ b/a/ai/aio/aiometa.com.html
@@ -1,25 +1,27 @@
-<!--The following is the downloaded HTML source of the aiometa.com privacy policy that was archived on 2017-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170628023149id_/http%3A//www.aiometa.com/about/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the aiometa.com privacy policy that was archived on 2017-07-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170729122540id_/http%3A//aiometa.com/about/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
-  <title>aiometa</title>
+  <title>aiometa - Privacy Policy</title>
+  <meta name="keywords" content="aiometa Privacy Policy">
+  <meta name="description" content="aiometa Meta Search Engine for Web, Videos, Images &amp; more">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/manifest.json">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="apple-mobile-web-app-title" content="aiometa">
-  <meta name="application-name" content="aiometa">
+  <meta name="apple-mobile-web-app-title" content="aiometa.com">
+  <meta name="application-name" content="aiometa.com">
   <meta name="theme-color" content="#ffffff">
   <meta name="format-detection" content="telephone=no">
-  <link rel="stylesheet" media="all" href="/assets/application-242a43d7a4c3a284c099f1800855fcb2b99cf578ad93682d3f176a99c0cc8943.css" data-turbolinks-track="reload">
-  <script async="" src="https://www.google-analytics.com/analytics.js"></script><script src="/assets/application-be08ef0e7d617008eec4388fe2a567b3baa97de6d8efe2329618a3e2e0935167.js" data-turbolinks-track="reload"></script>
+  <link rel="stylesheet" media="all" href="/assets/application-ad5864b9bc03e782f7e88c93b668a62996fb65a08eb4738d3aaef2b0971af2af.css" data-turbolinks-track="reload">
+  <script async="" src="https://www.google-analytics.com/analytics.js"></script><script src="/assets/application-4ffaeabd72d228a6998f4d4d8306d08af70f5d14f368f9810be07ad48a14314b.js" data-turbolinks-track="reload"></script>
   <meta name="csrf-param" content="authenticity_token">
-<meta name="csrf-token" content="Q3OUtKV2AkoHLKYq4KT6CUov0/wgJuexGU7Y5SgaJ/gHS4IALqsXrZgJld4tz1obrntsieadn74mHZxjwARm5g==">
-  <script>
- (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<meta name="csrf-token" content="RX2Z1joN3tvHDWGzbVHnx7PyGkyO4O9VXVK2QslHjDrmrngyNUlLT1uQooM4+YaA62bJp/7eBa9QfMsOQ5Zoew==">
+  <script type="text/javascript">
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
@@ -27,12 +29,14 @@
  ga('create', 'UA-101483437-1', 'auto');
  ga('send', 'pageview');
 
-</script></head>
+  </script>
+  <script src="https://s.yimg.com/uv/dm/scripts/syndication.js"></script>
+</head>
 
   <body data-q="">
     <nav class="nav-shared hidden-xl-up">
       <div class="container text-center">
-        <a class="brand" href="http://www.aiometa.com/"><img src="/assets/brand-78b579109e20f1ef4e73efa7cc5bb6b397b58ada87ab6dadc86c2a82de4a0c3d.svg" alt="Brand"></a>
+        <a class="brand" href="http://aiometa.com/"><img src="/assets/brand-78b579109e20f1ef4e73efa7cc5bb6b397b58ada87ab6dadc86c2a82de4a0c3d.svg" alt="Brand"></a>
         <nav class="nav justify-content-center">
             <li class="nav-item active"><a class="nav-link" href="/web/">Web</a></li>
             <li class="nav-item"><a class="nav-link" href="/images/">Images</a></li>
@@ -57,7 +61,7 @@
               <li class="nav-item"><a class="nav-link" href="/news/">News</a></li>
               <li class="nav-item"><a class="nav-link" href="/shopping/">Shopping</a></li>
           </ul>
-          <a class="brand" href="http://www.aiometa.com/"><img src="/assets/brand-w-28816a931e656b58242d8151104aa988bd3110a84e035ea4da3fe867536f6da5.svg" alt="Brand w"></a>
+          <a class="brand" href="http://aiometa.com/"><img src="/assets/brand-w-28816a931e656b58242d8151104aa988bd3110a84e035ea4da3fe867536f6da5.svg" alt="Brand w"></a>
         </div>
       </div>
     </nav>
@@ -66,7 +70,7 @@
         <div class="row">
           <div class="col-xl-6">
 
-            <form class="mr-auto ml-auto" id="qf" action="/web" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="6ieRu2ThLTvDnx+cX7O2QVpPrdnpxg3LEwitu7qjHkeAybyvovFFYkGpnOCCgAn4sm2LMk3bYutrAHo1MFYBYQ==">
+            <form class="mr-auto ml-auto" id="qf" action="/web" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="D/yridgVD7+TWVd8S+8GIyanCOlN+i4XFs9qaCcUk71AoW+Wb7/sOsvve80+m/p/oiKQg5/5/U5joE0N0wp5uw==">
               <div class="input-group">
                 <input type="text" id="q" name="query" class="form-control" value="" placeholder="" data-suggest="true" autocomplete="off" tabindex="1" autocapitalize="off" autocorrect="off">
                 <span class="input-group-btn">
@@ -83,7 +87,7 @@
     <div class="container">
       <div class="row about">
   <div class="col-md-8 ml-auto mr-auto">
-    <h1>Privacy Policy &amp; Cookie Policy</h1>
+        <h1>Privacy Policy &amp; Cookie Policy</h1>
     <hr>
     <p>
       This privacy policy has been compiled to better serve those who are concerned with how their 'Personally Identifiable Information' (PII) is being used online. PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in accordance with our website.
@@ -233,7 +237,6 @@
       Last Edited on 2016-10-01
     </strong></p>
 
-
   </div>
 </div>
 
@@ -241,9 +244,10 @@
 
     <footer class="footer">
   <div class="container">
-    <a href="/about/tos">Terms of service</a> ·
-    <a href="/about/privacy">Privacy policy</a> ·
-    <a style="margin-right: 15px;" href="/about/imprint">Contact us</a>
+      <a href="/about/terms-of-service">Terms of service</a> ·
+      <a href="/about/privacy-policy">Privacy Policy</a> ·
+      <a href="/about/contact-us">Contact us</a> ·
+
     © 2017 aiometa.com
 
     <ul class="navbar-nav preferences hidden-sm-up" style="display: inline-block; margin-left: .25rem;">
@@ -255,7 +259,6 @@
         </div>
       </li>
     </ul>
-
 
     <br>
       <form class="form-inline" action="/web" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="✓">
