--- a/f/fe/fea/featurepics.com.html
+++ b/f/fe/fea/featurepics.com.html
@@ -1,39 +1,15 @@
-<!--The following is the downloaded HTML source of the featurepics.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606005945id_/http%3A//www.featurepics.com/HelpCenter/PrivacyPolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the featurepics.com privacy policy that was archived on 2017-07-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170729132207id_/https%3A//www.featurepics.com/HelpCenter/PrivacyPolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><head><meta name="viewport" content="width=device-width, initial-scale=1"><link href="../bandle/boot.css" rel="stylesheet"><title>
 	FeaturePics Privacy Policy.
 </title><meta name="description" content="We will never rent, sell or share information that personally identifies you for marketing purposes. Your participation is completely voluntary. You can update your account  information whenever you desire."><meta name="Author" content="FeaturePics.com"></head>
 <body>
     <form method="post" action="./PrivacyPolicy.aspx" id="form1">
-<div class="aspNetHidden">
-<input type="hidden" name="__EVENTTARGET" id="__EVENTTARGET" value="">
-<input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="s+4EvETIZ2cJxuaCgAhOU6syJ57DDMp9ocRLkzm8FeVbmcBrQLwKHuFCzjhlW6f6/0nxnTjUYbiCPecl+FSU4MKqnNPwqx/tpLDmSB2JXbfgHx4Y4fz0WTUg7sdDQoA0MW8OlbqkarQH1D6kMuS5FA==">
-</div>
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="WiSXIS68f4HOZYJPhBX+j6L6ZhbnChYB6XzCHQjocrA7AgUdBn3eNFkWAk8Qvi8EX9CsRSj4deydR+TrjWKqZDsmiGtsuqZa6sZ5S5gJY0dxgsB6Fsfam84TRVu9x63LZMphpgSVIZHpvCIfBvTyfA==">
 
-<script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">
-//<![CDATA[
-var theForm = document.forms['form1'];
-if (!theForm) {
-    theForm = document.form1;
-}
-function __doPostBack(eventTarget, eventArgument) {
-    if (!theForm.onsubmit || (theForm.onsubmit() != false)) {
-        theForm.__EVENTTARGET.value = eventTarget;
-        theForm.__EVENTARGUMENT.value = eventArgument;
-        theForm.submit();
-    }
-}
-//]]>
-</script>
-
-
-<div class="aspNetHidden">
-
-	<input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="85AF6501">
-	<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="bKIqpCktZorTxUv1y0wmAz/PTJfr6meDrzx0yKfJw/wSBKI+f9zlmGWIlwMDvhxujfM4c70FkZJkhAo2uDorYM51IUtaEI35h4gDZ6PZwq2C1Hl0nitugL7MMboTIyKHxReH9pjyZy5d9mXJzjNbhQ==">
-</div>
+<input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="85AF6501">
+<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="uxbqrOLN2FMTxfarQgbYImArxdxD24VB6ZLpCRCDFXA6U+4/K+N5xR2lRK0g7kk3EA3zWGdMUejXff+CtR+gVEdgfzaB5V9zLMQBxgxygaA+Gq/88a818ByN6qVHo5Tgz/HqdOlt7kYRnyd/pGntcQ==">
      
 <div class="container-fluid">
 <header>
@@ -147,7 +123,7 @@ function __doPostBack(eventTarget, eventArgument) {
 <li><a href="../HelpCenter/FAQ-for-image-buyers.aspx">FAQ for Image Buyers</a></li>
 <li><a href="../HelpCenter/Buy-stock-images-individually.aspx">Buy Images Individually</a></li>
 </ul></div></div><div class="col-lg-4 col-md-4"><div class="widget"><h5 class="widgetheading">Special Licenses</h5><ul class="link-list"><li><a href="../Licenses/Image-License-For-Merchants.aspx">Image Licensing For Merchants</a></li><li><a href="../Licenses/Image-Licensing-For-Software-Developers.aspx">Image Licensing For Software</a></li><li><a href="../Licenses/EBook-publishers.aspx">Image Licensing For E-Book Cover</a></li><li><a href="../Licenses/Image-License-For-Video-Production.aspx">Image Licensing For Video Production</a></li><li><a href="../Licenses/Logo-Type-Purposes-License.aspx">Image Licensing For Logo-Type Purposes</a></li><li><a href="../Licenses/Image-License-For-Design-Templates.aspx">Image Licensing For Design Templates</a></li><li><a href="../Licenses/Image-Licenses-for-Publications-Newspapers-Magazines.aspx">Newspapers and Magazines Publications</a></li></ul></div></div></div><div id="sub-footer"><div class="row"><div class="col-md-12"><div class="copyright"><p>FeaturePics.com 2006-2016. All right reserved.</p></div></div></div></div></div></footer>
-<script>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script>
 (function (i, s, o, g, r, a, m) {
 i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
 (i[r].q = i[r].q || []).push(arguments)
