--- a/v/vi/vip/viperial.com.html
+++ b/v/vi/vip/viperial.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the viperial.com privacy policy that was archived on 2017-03-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170319174436id_/http%3A//www.viperial2.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the viperial.com privacy policy that was archived on 2017-07-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170729174631id_/http%3A//www.viperial.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
         <meta charset="utf-8">
@@ -7,30 +7,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="download, free, mp3s, albums, mixtapes, classics, hiphop, rap, r&amp;b, pop, grime, stream, play, zip, music, tunes, tracks">
         <meta name="description" content="Daily Fresh With The Hottest Submissions">
-        <link rel="canonical" href="http://www.viperial2.com/privacy">
+        <link rel="canonical" href="http://www.viperial.com/privacy">
         <meta property="og:title" content="Viperial - From Fans for Fans">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="http://www.viperial2.com/privacy">
-        <meta property="og:image" content="http://www.viperial2.com/assets/images/og-image.png">
+        <meta property="og:url" content="http://www.viperial.com/privacy">
+        <meta property="og:image" content="http://www.viperial.com/assets/images/og-image.png">
                     <meta property="og:image:width" content="350">
             <meta property="og:image:height" content="350">
-                <link rel="stylesheet" type="text/css" href="http://www.viperial2.com/assets/stylesheets/style.css?v=2">
-        <link rel="favicon" type="image/x-icon" src="http://www.viperial2.com/favicon.ico">
-                <meta name="google-site-verification" content="U0QR30hq7u8KrEZNEvcEG8v4aY2KdgOcu8NJehvvzUk">
-    </head>
+                <link rel="stylesheet" type="text/css" href="http://www.viperial.com/assets/stylesheets/style.css?v=2">
+        <link rel="favicon" type="image/x-icon" src="http://www.viperial.com/favicon.ico">
+                <meta name="google-site-verification" content="WeRAazMwLqWB-R0r4l62CI34CU2zfy9-em1euOgu0dg">
+        <meta name="google-site-verification" content="6dnsS4hIPccCSjLRrT5BrY89lRVDwFUQvB9d9UGkgK8">
+        <meta name="google-site-verification" content="4GbdEAJaDST8n9dWoGgNfANFdab8ZjyBqtvGikmqqOM">
+        <meta name="google-site-verification" content="3YMeIjPhNXf6EVLG9-keAXObv7EFKnOCA9-Nog8AUcw">
+        <meta name="google-site-verification" content="m5EHBDTDm4IzcQl4IT3S4OfU1v0S34Z49XXwp_9c5go">
+    <script type="text/javascript" async="" src="//s10.histats.com/js15_as.js"></script><script type="text/javascript" async="" src="//s10.histats.com/js15_as.js"></script></head>
     <body>
         <div class="container">
-                        <section class="advertisements-bar clearfix">
-                <div class="advertisement leaderboard">
-                    <iframe src="http://creative.wwwpromoter.com/6666?d=728x90" style="border: none;" scrolling="no" width="728" height="90" frameborder="0"></iframe>
-                </div>
-                <div class="advertisement button">
-                    <a href="https://www.facebook.com/viperial2/" target="_blank"><img src="http://www.viperial2.com/uploads/ads/5/5_ulkzHAw9Tp.jpg" alt="advertisement"></a>
-                </div>
-            </section>
                         <header class="main clearfix">
-                <div class="headline"> &gt;&gt; DRAKE MORE LIFE DOWNLOAD. MORE LIFE ZIP DOWNLOAD. DRAKE MORE LIFE ALBUM DOWNLOAD. MORE LIFE LEAK DOWNLOAD. DRAKE MORE LIFE FREE DOWNLOAD. DRAKE MORE LIFE LEAK.</div>
-                <a href="http://www.viperial2.com" id="logo"></a>
+                <div class="headline"> &gt;&gt; MEEK MILL WINS &amp; LOSSES DOWNLOAD. MEEK MILL WINS &amp; LOSSES ZIP DOWNLOAD. WINS &amp; LOSSES ALBUM DOWNLOAD. MEEK MILL WINS &amp; LOSSES LEAK. WINS &amp; LOSSES DOWNLOAD.</div>
+                <a href="http://www.viperial.com" id="logo"></a>
                 <div class="mobile-navigation mobile-only-bl">
                     <ul class="mobile-nav">
                         <li class="mobile-actions" data-target="#main-navigation"><button><span class="fa fa-navicon"></span></button></li>
@@ -39,16 +35,16 @@
                 </div>
                 <nav class="main" id="main-navigation">
                     <ul>
-                        <li class=""><a href="http://www.viperial2.com" title="Homepage">Home</a></li>
-                        <li class=""><a href="http://www.viperial2.com/tracks/browse" title="Browse tracks">Tracks</a></li>
-                        <li class=""><a href="http://www.viperial2.com/albums/browse" title="Browse albums">Albums</a></li>
-                        <li class=""><a href="http://www.viperial2.com/mixtapes/browse" title="Browse mixtapes">Mixtapes</a></li>
-                        <li class=""><a href="http://www.viperial2.com/videos/browse" title="Browse videos">Videos</a></li>
-                        <li class=""><a href="http://www.viperial2.com/news/browse" title="Browse news">News</a></li>
-                        <li class=""><a href="http://www.viperial2.com/classics/browse" title="Browse classics">Classics</a></li>
+                        <li class=""><a href="http://www.viperial.com" title="Homepage">Home</a></li>
+                        <li class=""><a href="http://www.viperial.com/tracks/browse" title="Browse tracks">Tracks</a></li>
+                        <li class=""><a href="http://www.viperial.com/albums/browse" title="Browse albums">Albums</a></li>
+                        <li class=""><a href="http://www.viperial.com/mixtapes/browse" title="Browse mixtapes">Mixtapes</a></li>
+                        <li class=""><a href="http://www.viperial.com/videos/browse" title="Browse videos">Videos</a></li>
+                        <li class=""><a href="http://www.viperial.com/news/browse" title="Browse news">News</a></li>
+                        <li class=""><a href="http://www.viperial.com/classics/browse" title="Browse classics">Classics</a></li>
                     </ul>
                 </nav>
-                <form action="http://www.viperial2.com/search" method="get" class="search" id="main-search">
+                <form action="http://www.viperial.com/search" method="get" class="search" id="main-search">
                     <input type="text" name="q" placeholder="">
                     <button type="submit"><span class="fa fa-search"></span></button>
                 </form>
@@ -58,11 +54,11 @@
                 <main>
                     <section class="tabs standalone desktop-only-bl clearfix">
     <ul class="tabs-navigation">
-                <li class=""><a href="http://www.viperial2.com/tos">TOS</a></li>
-                <li class=""><a href="http://www.viperial2.com/content-removal">Content Removal</a></li>
-                <li class="active"><a href="http://www.viperial2.com/privacy">Privacy</a></li>
-                <li class=""><a href="http://www.viperial2.com/disclaimer">Disclaimer</a></li>
-                <li class=""><a href="http://www.viperial2.com/contact-us">Contact Us</a></li>
+                <li class=""><a href="http://www.viperial.com/tos">TOS</a></li>
+                <li class=""><a href="http://www.viperial.com/content-removal">Content Removal</a></li>
+                <li class="active"><a href="http://www.viperial.com/privacy">Privacy</a></li>
+                <li class=""><a href="http://www.viperial.com/disclaimer">Disclaimer</a></li>
+                <li class=""><a href="http://www.viperial.com/contact-us">Contact Us</a></li>
             </ul>
 </section>
 <article class="text-page clearfix">
@@ -101,14 +97,6 @@ the Privacy Policy.</p>
                                     </section>
             </section>
 
-                        <section class="advertisements-bar clearfix">
-                <div class="advertisement leaderboard">
-                    <iframe src="http://creative.wwwpromoter.com/6666?d=728x90" style="border: none;" scrolling="no" frameborder="0" height="90" width="728"></iframe>
-                </div>
-                <div class="advertisement button">
-                    <a href="https://www.facebook.com/viperial2/" target="_blank"><img src="http://www.viperial2.com/uploads/ads/7/7_5qMIzf83LN.jpg" alt="advertisement"></a>
-                </div>
-            </section>
                         <footer class="main clearfix">
                 <div class="mobile-bar clearfix mobile-only-bl">
                     <div class="mobile-label">
@@ -124,11 +112,11 @@ the Privacy Policy.</p>
                     <section class="footer-links">
                         <header>Quick Menu</header>
                         <ul class="footer-nav">
-                                                        <li><a href="http://www.viperial2.com/tos">TOS</a></li>
-                                                        <li><a href="http://www.viperial2.com/content-removal">Content Removal</a></li>
-                                                        <li><a href="http://www.viperial2.com/privacy">Privacy</a></li>
-                                                        <li><a href="http://www.viperial2.com/disclaimer">Disclaimer</a></li>
-                                                        <li><a href="http://www.viperial2.com/contact-us">Contact Us</a></li>
+                                                        <li><a href="http://www.viperial.com/tos">TOS</a></li>
+                                                        <li><a href="http://www.viperial.com/content-removal">Content Removal</a></li>
+                                                        <li><a href="http://www.viperial.com/privacy">Privacy</a></li>
+                                                        <li><a href="http://www.viperial.com/disclaimer">Disclaimer</a></li>
+                                                        <li><a href="http://www.viperial.com/contact-us">Contact Us</a></li>
                                                     </ul>
                     </section>
                     <section class="footer-links">
@@ -158,11 +146,11 @@ the Privacy Policy.</p>
                     </section>
                 </div>
             </footer>
-            <section class="copyrights">2016 Viperial, All Rights Reserved</section>
+            <section class="copyrights">2017 Viperial, All Rights Reserved</section>
         </div>
-        <script type="text/javascript" src="http://www.viperial2.com/assets/javascripts/jquery.min.js"></script>
-        <script type="text/javascript" src="http://www.viperial2.com/assets/javascripts/audioplayer.js"></script>
-        <script type="text/javascript" src="http://www.viperial2.com/assets/javascripts/main.js"></script>
+        <script type="text/javascript" src="http://www.viperial.com/assets/javascripts/jquery.min.js"></script>
+        <script type="text/javascript" src="http://www.viperial.com/assets/javascripts/audioplayer.js"></script>
+        <script type="text/javascript" src="http://www.viperial.com/assets/javascripts/main.js"></script>
                 <script type="text/javascript" src="https://static.addtoany.com/menu/page.js" async=""></script>
 
         <script data-cfasync="false" type="text/javascript" src="//go.pub2srv.com/apu.php?zoneid=467467"></script> 
@@ -173,14 +161,29 @@ var infolinks_wsid = 35;
 </script>
 <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 
-                    <script type="text/javascript">document.write(unescape("%3Cscript src=%27http://s10.histats.com/js15.js%27 type=%27text/javascript%27%3E%3C/script%3E"));</script><script src="http://s10.histats.com/js15.js" type="text/javascript"></script>
-<a href="http://www.histats.com" target="_blank" title="counter"><script type="text/javascript">
-try {Histats.start(1,2858820,4,0,0,0,"");
-Histats.track_hits();} catch(err){};
-</script></a>
-<noscript><a href="http://www.histats.com" target="_blank"><img src="http://sstatic1.histats.com/0.gif?2858820&101" alt="counter" border="0"></a></noscript>
+                    <script type="text/javascript">var _Hasync= _Hasync|| [];
+_Hasync.push(['Histats.start', '1,2858820,4,0,0,0,00010000']);
+_Hasync.push(['Histats.fasi', '1']);
+_Hasync.push(['Histats.track_hits', '']);
+(function() {
+var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+hs.src = ('//s10.histats.com/js15_as.js');
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+})();</script>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?2858820&101" alt="free webpage hit counter" border="0"></a></noscript>
 
-<script data-cfasync="false" type="text/javascript" src="//friesmeasureretain.info/REOMOeyJyb3V0ZSI6ICJnZXRfanMiLCAic3RpZCI6ICIxMDUzIiwgImQiOiAiZnJpZXNtZWFzdXJlcmV0YWluLmluZm8ifQ==bDlm4"></script>
+   <!-- Histats.com  START  (aync)-->
+<script type="text/javascript">var _Hasync= _Hasync|| [];
+_Hasync.push(['Histats.start', '1,3792937,4,0,0,0,00010000']);
+_Hasync.push(['Histats.fasi', '1']);
+_Hasync.push(['Histats.track_hits', '']);
+(function() {
+var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+hs.src = ('//s10.histats.com/js15_as.js');
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+})();</script>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?3792937&101" alt="free tracker" border="0"></a></noscript>
+<!-- Histats.com  END  -->
             
 
 </body></html>
