rylskyart.com (archived on 2017-07-30)
{
  "alexa_rank": 52215,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 16580,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.4,
  "homepage_snapshot_redirected_domain": "rylskyart.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20171002064756id_/https://www.rylskyart.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20171002064756id_/http%3A//rylskyart.com",
  "interval": "2017_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "rylskyart.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170730222058id_/https%3A//www.rylskyart.com/privacy",
  "policy_title": "Rylsky Art - Privacy",
  "policy_url": "rylskyart.com/privacy",
  "sha1": "29c6e1609603fab229324d489e372edee71fa063",
  "simhash": 1792508555862958711,
  "simhash_updated": false,
  "site_hostname": "rylskyart.com",
  "site_url": "http://rylskyart.com",
  "smog": 17.35,
  "strict_updated": false,
  "timestamp": "20170730222058",
  "word_count": 2669,
  "year": 2017
}

--- a/r/ry/ryl/rylskyart.com.html
+++ b/r/ry/ryl/rylskyart.com.html
@@ -1,26 +1,26 @@
-<!--The following is the downloaded HTML source of the rylskyart.com privacy policy that was archived on 2017-05-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170525154132id_/http%3A//www.rylskyart.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rylskyart.com privacy policy that was archived on 2017-07-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170730222058id_/https%3A//www.rylskyart.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Rylsky Art - Privacy</title>
-	<link rel="canonical" href="http://www.rylskyart.com/privacy/">
-	<link rel="stylesheet" type="text/css" href="http://static.rylskyart.com/view/css/main.css?fv=1487358133">
-	<link rel="stylesheet" type="text/css" href="http://static.rylskyart.com/view/css/static.css?fv=1487358133">
-	<link rel="stylesheet" type="text/css" href="http://static.rylskyart.com/view/css/ra/main.css?fv=1487358133">
-	<link rel="shortcut icon" type="image/x-icon" href="http://www.rylskyart.com/favicon.ico">
-	<script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-M2B6HMT"></script><script type="text/javascript" src="http://static.rylskyart.com/view/js/jquery.js?fv=1487358133"></script>
-	<script type="text/javascript" src="http://static.rylskyart.com/view/js/main.js?fv=1487358133"></script>
+	<link rel="canonical" href="https://www.rylskyart.com/privacy/">
+	<link rel="stylesheet" type="text/css" href="https://static.rylskyart.com/view/css/main.css?fv=1499713953">
+	<link rel="stylesheet" type="text/css" href="https://static.rylskyart.com/view/css/static.css?fv=1499713953">
+	<link rel="stylesheet" type="text/css" href="https://static.rylskyart.com/view/css/ra/main.css?fv=1499713953">
+	<link rel="shortcut icon" type="image/x-icon" href="https://www.rylskyart.com/favicon.ico">
+	<script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-M2B6HMT"></script><script type="text/javascript" src="https://static.rylskyart.com/view/js/jquery.js?fv=1499713953"></script>
+	<script type="text/javascript" src="https://static.rylskyart.com/view/js/main.js?fv=1499713953"></script>
 	<!--[if lt IE 9]>
-		<script type="text/javascript" src="http://static.rylskyart.com/view/js/responsive/ie.js?fv=1487358133"></script>
+		<script type="text/javascript" src="https://static.rylskyart.com/view/js/responsive/ie.js?fv=1499713953"></script>
 	<![endif]-->
 	<!--[if lte IE 7]>
-		<script src="http://static.rylskyart.com/view/js/IE8.js?fv=1487358133" type="text/javascript">var IE7_PNG_SUFFIX = ":";</script>
-		<link href="http://static.rylskyart.com/view/css/ie.css?fv=1487358133" rel="stylesheet" type="text/css"/>
+		<script src="https://static.rylskyart.com/view/js/IE8.js?fv=1499713953" type="text/javascript">var IE7_PNG_SUFFIX = ":";</script>
+		<link href="https://static.rylskyart.com/view/css/ie.css?fv=1499713953" rel="stylesheet" type="text/css"/>
 	<![endif]-->
 	<!--[if lte IE 6]>
-		<script type="text/javascript" src="http://static.rylskyart.com/view/js/ie6.js?fv=1487358133"></script>
-		<link href="http://static.rylskyart.com/view/css/ie6.css?fv=1487358133" rel="stylesheet" type="text/css"/>
+		<script type="text/javascript" src="https://static.rylskyart.com/view/js/ie6.js?fv=1499713953"></script>
+		<link href="https://static.rylskyart.com/view/css/ie6.css?fv=1499713953" rel="stylesheet" type="text/css"/>
 	<![endif]-->
 </head>
 <body>
@@ -30,55 +30,55 @@
 		<div class="header">
 			<div class="top_nav">
 				<ul class="top_links">
-					<li><a href="http://www.rylskyart.com/">Home</a></li>
-					<li><a href="http://members.rylskyart.com/members/?v=static&amp;page=privacy">Member's Login</a></li>
+					<li><a href="https://www.rylskyart.com/">Home</a></li>
+					<li><a href="https://members.rylskyart.com/members/?v=static&amp;page=privacy">Member's Login</a></li>
 					<li class="network_header">
-						<a href="http://www.rylskyart.com/network/"><span class="network_arrow">▼</span> MetArt Network</a>
+						<a href="https://www.rylskyart.com/network/"><span class="network_arrow">▼</span> MetArt Network</a>
 						<div class="network_container">
 							<div class="network_container_header"></div>
 							<ul class="network_container_list">
-								<li><a href="https://www.metart.com/?inl=RA_smn"><img src="http://static.rylskyart.com/view/images/network/icons/ma.png" alt="" width="32">MetArt</a></li>
-								<li><a href="https://www.sexart.com/?inl=RA_smn"><img src="http://static.rylskyart.com/view/images/network/icons/sa.png" alt="" width="32">SEXART</a></li>
-								<li><a href="https://www.thelifeerotic.com/?inl=RA_smn"><img src="http://static.rylskyart.com/view/images/network/icons/tle.png" alt="" width="32">The Life Erotic</a></li>
-								<li><a href="https://www.vivthomas.com/?inl=RA_smn"><img src="http://static.rylskyart.com/view/images/network/icons/vt.png" alt="" width="32">Viv Thomas</a></li>
-								<li><a href="https://www.errotica-archives.com/?inl=RA_smn"><img src="http://static.rylskyart.com/view/images/network/icons/ea.png" alt="" width="32">Errotica Archives</a></li>
-								<li><a href="https://www.eroticbeauty.com/?inl=RA_smn"><img src="http://static.rylskyart.com/view/images/network/icons/eb.png" alt="" width="32">Erotic Beauty</a></li>
-								<li class="network_static"><a href="http://www.rylskyart.com/cams/"><img src="http://static.rylskyart.com/view/images/network/icons/cams.png" alt="">Live Cams</a></li>
-								<li class="network_cams"><a href="http://live.tv?inl=RA_smn&amp;over18=true"><img src="http://static.rylskyart.com/view/images/network/icons/live.png" alt="">Live.tv</a></li>
-								<li class="network_static last"><a href="http://www.rylskyart.com/network/"><img src="http://static.rylskyart.com/view/images/network/icons/network.png" alt="">MetArt Network</a></li>
+								<li><a href="https://www.metart.com/"><img src="https://static.rylskyart.com/view/images/network/icons/ma.png" alt="" width="32">MetArt</a></li>
+								<li><a href="https://www.sexart.com/"><img src="https://static.rylskyart.com/view/images/network/icons/sa.png" alt="" width="32">SEXART</a></li>
+								<li><a href="https://www.thelifeerotic.com/"><img src="https://static.rylskyart.com/view/images/network/icons/tle.png" alt="" width="32">The Life Erotic</a></li>
+								<li><a href="https://www.vivthomas.com/"><img src="https://static.rylskyart.com/view/images/network/icons/vt.png" alt="" width="32">Viv Thomas</a></li>
+								<li><a href="https://www.errotica-archives.com/"><img src="https://static.rylskyart.com/view/images/network/icons/ea.png" alt="" width="32">Errotica Archives</a></li>
+								<li><a href="https://www.eroticbeauty.com/"><img src="https://static.rylskyart.com/view/images/network/icons/eb.png" alt="" width="32">Erotic Beauty</a></li>
+								<li class="network_static"><a href="https://www.rylskyart.com/cams/"><img src="https://static.rylskyart.com/view/images/network/icons/cams.png" alt="">Live Cams</a></li>
+								<li class="network_cams"><a href="http://live.tv?over18=true"><img src="https://static.rylskyart.com/view/images/network/icons/live.png" alt="">Live.tv</a></li>
+								<li class="network_static last"><a href="https://www.rylskyart.com/network/"><img src="https://static.rylskyart.com/view/images/network/icons/network.png" alt="">MetArt Network</a></li>
 							</ul>
 							<div class="network_container_footer"></div>
 						</div>
 					</li>
-					<li><a href="http://www.rylskyart.com/blog/">Behind The Scenes</a></li>
-					<li class="last"><a href="http://www.rylskyart.com/search/">Advanced Search</a></li>
+					<li><a href="https://www.rylskyart.com/blog/">Behind The Scenes</a></li>
+					<li class="last"><a href="https://www.rylskyart.com/search/">Advanced Search</a></li>
 				</ul>
 				<div class="top_search">
-					<form action="http://www.rylskyart.com/search/" method="post">
+					<form action="https://www.rylskyart.com/search/" method="post">
 						<input type="text" value="Search Site" title="Search Site" name="q" class="search_input auto_hint">
-						<input type="image" src="http://static.rylskyart.com/view/images/ra/search_submit.png" class="search_submit" alt="">
+						<input type="image" src="https://static.rylskyart.com/view/images/ra/search_submit.png" class="search_submit" alt="">
 					</form>
 				</div>
 			</div>
 			<div class="site_name">
-				<a href="http://www.rylskyart.com/"><img src="http://static.rylskyart.com/view/images/ra/header_logo.png" alt="Rylsky Art"></a>
+				<a href="https://www.rylskyart.com/"><img src="https://static.rylskyart.com/view/images/ra/header_logo.png" alt="Rylsky Art"></a>
 			</div>
 			<div class="top_menu">
 				<div class="left_menu">
 					<ul class="left_menu_list">
-						<li class="first"><a href="http://www.rylskyart.com/archive/triple/">Updates</a></li>
-						<li><a href="http://www.rylskyart.com/galleries/top/">Top Photos</a></li>
-						<li><a href="http://www.rylskyart.com/movies/">Movies</a></li>
-						<li><a href="http://www.rylskyart.com/models/top/">Models</a></li>
-						<li><a href="http://www.rylskyart.com/cams/" target="_blank">Live Cams</a></li>
-						<li class="active last"><a href="http://www.rylskyart.com/signup/">Get Access</a></li>
+						<li class="first"><a href="https://www.rylskyart.com/archive/triple/">Updates</a></li>
+						<li><a href="https://www.rylskyart.com/galleries/top/">Top Photos</a></li>
+						<li><a href="https://www.rylskyart.com/movies/">Movies</a></li>
+						<li><a href="https://www.rylskyart.com/models/top/">Models</a></li>
+						<li><a href="https://www.rylskyart.com/cams/" target="_blank">Live Cams</a></li>
+						<li class="active last"><a href="https://www.rylskyart.com/signup/">Get Access</a></li>
 					</ul>
 				</div>
 				<div class="right_menu">
 					<ul class="right_menu_list">
 						<li><a href="javascript:void(0);" class="recent_display"><span class="recent_status">+</span> Recents</a></li>
-						<li><a href="http://www.rylskyart.com/signup/" class="option_display">Options</a></li>
-						<li class="last"><a href="http://www.rylskyart.com/network/">Network</a></li>
+						<li><a href="https://www.rylskyart.com/signup/" class="option_display">Options</a></li>
+						<li class="last"><a href="https://www.rylskyart.com/network/">Network</a></li>
 					</ul>
 				</div>
 			</div>
@@ -217,58 +217,58 @@ California Civil Code Section 1798.83 permits customers of Company who are Calif
 		<div class="wrapper footer_area">
 			<div class="newsletter">
 				<span class="newsletter_title">Newsletter</span>
-				<form action="http://www.rylskyart.com/newsletter/" method="post" class="newsletter_form">
+				<form action="https://www.rylskyart.com/newsletter/" method="post" class="newsletter_form">
 					<input type="text" name="email" class="email_input auto_hint" title="Email Address" value="Email Address">
-					<input type="image" src="http://static.rylskyart.com/view/images/ra/subscribe.png" alt="Subscribe" class="email_subscribe">
+					<input type="image" src="https://static.rylskyart.com/view/images/ra/subscribe.png" alt="Subscribe" class="email_subscribe">
 					<p class="newsletter_text">Get our newsletter and receive free content right to your inbox!</p>
 				</form>
 			</div>
 			<div class="footer_columns">
 				<div class="footer_column">
 					<ul>
-						<li><a href="http://www.rylskyart.com/">Home</a></li>
-						<li><a href="http://www.rylskyart.com/archive/triple/">Updates</a></li>
-						<li><a href="http://www.rylskyart.com/cams/" target="_blank">Live Cams</a></li>
-						<li><a href="http://www.rylskyart.com/movies/top/">Top Movies</a></li>
-						<li><a href="http://www.rylskyart.com/models/top/">Top Models</a></li>
-						<li><a href="http://www.rylskyart.com/galleries/top/">Top Galleries</a></li>
-						<li><a href="http://www.rylskyart.com/images/top/">Top Images</a></li>
-						<li><a href="http://www.rylskyart.com/blog/">Rylsky's Blog</a></li>
+						<li><a href="https://www.rylskyart.com/">Home</a></li>
+						<li><a href="https://www.rylskyart.com/archive/triple/">Updates</a></li>
+						<li><a href="https://www.rylskyart.com/cams/" target="_blank">Live Cams</a></li>
+						<li><a href="https://www.rylskyart.com/movies/top/">Top Movies</a></li>
+						<li><a href="https://www.rylskyart.com/models/top/">Top Models</a></li>
+						<li><a href="https://www.rylskyart.com/galleries/top/">Top Galleries</a></li>
+						<li><a href="https://www.rylskyart.com/images/top/">Top Images</a></li>
+						<li><a href="https://www.rylskyart.com/blog/">Rylsky's Blog</a></li>
 					</ul>
 				</div>
 				<div class="footer_column">
 					<ul>
-						<li><a href="http://members.rylskyart.com/members/?v=static&amp;page=privacy">Member's Login</a></li>
-						<li><a href="http://www.rylskyart.com/password-service/">Password Reset</a></li>
-						<li><a href="http://www.rylskyart.com/support/">Customer Support</a></li>
-						<li><a href="http://www.rylskyart.com/piracy/">Report Abuse</a></li>
+						<li><a href="https://members.rylskyart.com/members/?v=static&amp;page=privacy">Member's Login</a></li>
+						<li><a href="https://www.rylskyart.com/password-service/">Password Reset</a></li>
+						<li><a href="https://www.rylskyart.com/support/">Customer Support</a></li>
+						<li><a href="https://www.rylskyart.com/piracy/">Report Abuse</a></li>
 						<li><a href="http://metartmoney.com/" target="_blank">Webmasters</a></li>
-						<li><a href="http://www.rylskyart.com/philosophy/">Philosophy</a></li>
-						<li><a href="http://www.rylskyart.com/privacy/">Privacy</a></li>
-						<li><a href="http://www.rylskyart.com/terms/">Terms</a></li>
+						<li><a href="https://www.rylskyart.com/philosophy/">Philosophy</a></li>
+						<li><a href="https://www.rylskyart.com/privacy/">Privacy</a></li>
+						<li><a href="https://www.rylskyart.com/terms/">Terms</a></li>
 					</ul>
 				</div>
 			</div>
 			<div class="join_box footer_join">
-				<a href="http://www.rylskyart.com/signup/" class="join_box_top">Get Access</a>
-				<a href="http://www.rylskyart.com/archive/triple/" class="join_box_middle"><img src="http://static.rylskyart.com/view/images/ra/arrow.png" alt="" class="join_box_arrow">Free Preview</a>
+				<a href="https://www.rylskyart.com/signup/" class="join_box_top">Get Access</a>
+				<a href="https://www.rylskyart.com/archive/triple/" class="join_box_middle"><img src="https://static.rylskyart.com/view/images/ra/arrow.png" alt="" class="join_box_arrow">Free Preview</a>
 				<div class="join_box_login">
 					<span class="join_box_login_title">Already a member?</span>
-					<a href="http://members.rylskyart.com/members/?v=static&amp;page=privacy" class="join_box_login_button">Login</a>
+					<a href="https://members.rylskyart.com/members/?v=static&amp;page=privacy" class="join_box_login_button">Login</a>
 				</div>
 			</div>
 			<div class="footer_sites">
 				<ul>
-					<li><a href="https://www.metart.com/?inl=RA_f"><span class="footer_site_name">MetArt</span><span class="footer_site_description"> - Softcore Porn</span></a></li>
-					<li><a href="https://www.sexart.com/?inl=RA_f"><span class="footer_site_name">SexArt</span><span class="footer_site_description"> - Erotic Sex Videos</span></a></li>
-					<li><a href="https://www.thelifeerotic.com/?inl=RA_f"><span class="footer_site_name">The Life Erotic</span><span class="footer_site_description"> - The Art of Masturbation</span></a></li>
-					<li><a href="https://www.eroticbeauty.com/?inl=RA_f"><span class="footer_site_name">Erotic Beauty</span><span class="footer_site_description"> - The Hottest Nude Models</span></a></li>
-					<li><a href="https://www.errotica-archives.com/?inl=RA_f"><span class="footer_site_name">Errotica Archives</span><span class="footer_site_description"> - The Ultimate In Nude Art Expression</span></a></li>
+					<li><a href="https://www.metart.com/"><span class="footer_site_name">MetArt</span><span class="footer_site_description"> - Softcore Porn</span></a></li>
+					<li><a href="https://www.sexart.com/"><span class="footer_site_name">SexArt</span><span class="footer_site_description"> - Erotic Sex Videos</span></a></li>
+					<li><a href="https://www.thelifeerotic.com/"><span class="footer_site_name">The Life Erotic</span><span class="footer_site_description"> - The Art of Masturbation</span></a></li>
+					<li><a href="https://www.eroticbeauty.com/"><span class="footer_site_name">Erotic Beauty</span><span class="footer_site_description"> - The Hottest Nude Models</span></a></li>
+					<li><a href="https://www.errotica-archives.com/"><span class="footer_site_name">Errotica Archives</span><span class="footer_site_description"> - The Ultimate In Nude Art Expression</span></a></li>
 				</ul>
 				<div class="clear"></div>
 			</div>
 			<div class="twotwofiveseven">
-				<p><a href="http://www.rylskyart.com/2257/" class="disclaimer">18 U.S.C. 2257 Record-Keeping Requirements Compliance Statement</a></p>
+				<p><a href="https://www.rylskyart.com/2257/" class="disclaimer">18 U.S.C. 2257 Record-Keeping Requirements Compliance Statement</a></p>
 				<p>Warning - This site contains adult material of a sexual nature - you must be of legal age in your area to view this material.</p>
 				<p>All materials on rylskyart.com, are copyright © 2017 rylskyart.com.</p>
 				<p>All models were at least 18 years of age when photographed.</p>
@@ -300,7 +300,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-M2B6HMT');</script>
 <!-- End Google Tag Manager -->
-	<a href="javascript:mam_offerOpen();" class="sidebar"><img src="http://static.rylskyart.com/view/images/ra/sidebar.png" alt=""></a>
+	<a href="javascript:mam_offerOpen();" class="sidebar"><img src="https://static.rylskyart.com/view/images/ra/sidebar.png" alt=""></a>
 	<script type="text/javascript">
 		var mam_sitename = 'Rylsky Art';
 		if(jQuery.cookie('ra_PA')) {
@@ -328,10 +328,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	{
 		"@context": "http://schema.org",
 		"@type": "WebSite",
-		"url": "http://www.rylskyart.com/",
+		"url": "https://www.rylskyart.com/",
 		"potentialAction": {
 			"@type": "SearchAction",
-			"target": "http://www.rylskyart.com/search/{search_term_string}/",
+			"target": "https://www.rylskyart.com/search/{search_term_string}/",
 			"query-input": "required name=search_term_string"
 		}
 	}
